Fix css import for frontpage

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -12,7 +12,7 @@
     <ui:define name="content">
         <h:form id="form" prependId="false">
             <f:facet name="last">
-                <h:outputStylesheet name="new-ticket.css" library="styles" />
+                <h:outputStylesheet name="index.css" library="styles" />
             </f:facet>
 
             <p:panel style="margin-bottom: 20px; margin-top: 50px;" header="[12. Juni 2019] JETZT GEWINNEN: 2 Tickets für Meisterdetektiv Pikachu!" styleClass="center" >
