--- a/src/main/webapp/pages/editor/all-tickets.xhtml
+++ b/src/main/webapp/pages/editor/all-tickets.xhtml
@@ -29,6 +29,7 @@
                 <p:panel id="statusPanel">
                     <p:panelGrid columns="2">
                         <p:selectOneButton value="#{filterBean.selectedOption}">
+                            <f:selectItem itemLabel="All" itemValue="all" />
                             <f:selectItem itemLabel="Open" itemValue="open" />
                             <f:selectItem itemLabel="In Process" itemValue="inProcess" />
                             <f:selectItem itemLabel="Closed" itemValue="closed" />
