--- a/src/main/webapp/pages/editor/all-tickets.xhtml
+++ b/src/main/webapp/pages/editor/all-tickets.xhtml
@@ -28,7 +28,7 @@
                 </p:panelGrid>
                 <p:panel id="statusPanel">
                     <p:panelGrid columns="2">
-                        <p:selectOneButton value="#{filterBean.selectedOption}">
+                        <p:selectOneButton value="#{filterBean.selectedOptionForAllTickets}">
                             <f:selectItem itemLabel="All" itemValue="all" />
                             <f:selectItem itemLabel="Open" itemValue="open" />
                             <f:selectItem itemLabel="In Process" itemValue="inProcess" />
