--- a/src/main/webapp/pages/editor/all-tickets.xhtml
+++ b/src/main/webapp/pages/editor/all-tickets.xhtml
@@ -28,13 +28,13 @@
                 </p:panelGrid>
                 <p:panel id="statusPanel">
                     <p:panelGrid columns="2">
-                        <p:selectOneButton value="#{filterBean.selectedOptionForAllTickets}">
+                        <p:selectOneButton value="#{filterBean.selectedOptionForAllTickets}" >
                             <f:selectItem itemLabel="All" itemValue="all" />
                             <f:selectItem itemLabel="Open" itemValue="open" />
                             <f:selectItem itemLabel="In Process" itemValue="inProcess" />
                             <f:selectItem itemLabel="Closed" itemValue="closed" />
+                            <p:ajax update="searchResult" listener="#{ticketEditorBean.fetchAllTickets}" />
                         </p:selectOneButton>
-                        <p:commandButton value="Sortieren" update="searchResult" />
                     </p:panelGrid>
                 </p:panel>
             </p:panel>
