--- a/src/main/webapp/pages/customer/company-tickets.xhtml
+++ b/src/main/webapp/pages/customer/company-tickets.xhtml
@@ -19,12 +19,22 @@
             #{ticketCustomerBean.fetchAllTickets()}
 
             <p:panel id="searchPanel" >
-                <p:panelGrid id="searchPanelGrid" columns="1">
-                    <p:inputText id="searchInput" value="#{ticketCustomerBean.searchString}">
-                        <p:ajax event="keyup" delay="100" update="searchResult"
-                                listener="#{ticketCustomerBean.fetchAllTickets()}" />
-                    </p:inputText>
-                    <p:watermark for="searchInput" value="Nach Tickets suchen..." id="watermark" />
+                <p:panelGrid id="searchPanelGrid" columns="2">
+                    <p:column>
+                        <p:selectOneButton value="#{filterBean.selectedOptionForAllTickets}" >
+                            <f:selectItem itemLabel="Offen" itemValue="open" />
+                            <f:selectItem itemLabel="In Bearbeitung" itemValue="inProcess" />
+                            <f:selectItem itemLabel="Geschlossen" itemValue="closed" />
+                            <p:ajax update="searchResult" listener="#{ticketCustomerBean.fetchAllTickets()}" />
+                        </p:selectOneButton>
+                    </p:column>
+                    <p:column>
+                        <p:inputText id="searchInput" value="#{ticketCustomerBean.searchString}">
+                            <p:ajax event="keyup" delay="100" update="searchResult"
+                                    listener="#{ticketCustomerBean.fetchAllTickets()}" />
+                        </p:inputText>
+                        <p:watermark for="searchInput" value="Nach Tickets suchen..." id="watermark" />
+                    </p:column>
                 </p:panelGrid>
             </p:panel>
 
