--- a/src/main/webapp/pages/editor/ticket-details.xhtml
+++ b/src/main/webapp/pages/editor/ticket-details.xhtml
@@ -68,13 +68,13 @@
                 <f:facet name="header">Verlauf</f:facet>
 
                 <h:panelGrid columns="2" style="width:100%" columnClasses="logo,detail">
-                    <h:outputText value="#{msgs['date']}: " />
+                    <h:outputText value="#{msgs['date']}: "  style="font-weight: bold"  />
                     <h:outputText value="#{generalView.formatDate(entry.createDate)}" />
 
-                    <h:outputText value="#{msgs['editor']}: " />
+                    <h:outputText value="#{msgs['editor']}: "  style="font-weight: bold"  />
                     <h:outputText value="#{userBean.getUserName(entry.creatorID)}" />
 
-                    <h:outputText value="#{msgs['entry']}: " />
+                    <h:outputText value="#{msgs['entry']}: "  style="font-weight: bold"  />
                     <h:outputText value="#{entry.content}" />
                 </h:panelGrid>
             </p:dataScroller>
