--- a/src/main/webapp/pages/editor/my-tickets.xhtml
+++ b/src/main/webapp/pages/editor/my-tickets.xhtml
@@ -35,7 +35,7 @@
                     <f:facet name="header">Tickets</f:facet>
 
                     <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
-                        <h:commandButton action="#{ticketEditorBean.viewTicketDetails(ticket, 'editor-all-tickets')}" value="Details" id="detailsButton" />
+                        <h:commandButton action="#{ticketEditorBean.viewTicketDetails(ticket, 'editor-my-tickets')}" value="Details" id="detailsButton" />
 
                         <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
 
