*hotfix: error handling for getUserCompany + renamed "Bearbeiter" to "Ersteller" because customers can add entries too

--- a/src/main/webapp/pages/customer/ticket-details.xhtml
+++ b/src/main/webapp/pages/customer/ticket-details.xhtml
@@ -53,7 +53,7 @@
                 <h:outputText value="#{msgs['date']}: "  style="font-weight: bold"  />
                 <h:outputText value="#{generalView.formatDate(entry.createDate)}" />
 
-                <h:outputText value="#{msgs['editor']}: "  style="font-weight: bold"  />
+                <h:outputText value="#{msgs['label.creator']}: "  style="font-weight: bold"  />
                 <h:outputText value="#{userBean.getUserName(entry.creatorID)}" />
 
                 <h:outputText value="#{msgs['entry']}: "  style="font-weight: bold"  />
